Bug 213479 - WebGL cannot create a context if there is no GPU on the PCIe bus
Summary: WebGL cannot create a context if there is no GPU on the PCIe bus
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tim Horton
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-06-22 12:41 PDT by Tim Horton
Modified: 2020-06-22 13:25 PDT (History)
5 users (show)

See Also:


Attachments
Patch (1.61 KB, patch)
2020-06-22 12:41 PDT, Tim Horton
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Horton 2020-06-22 12:41:21 PDT
WebGL cannot create a context if there is no GPU on the PCIe bus
Comment 1 Tim Horton 2020-06-22 12:41:49 PDT
Created attachment 402497 [details]
Patch
Comment 2 EWS Watchlist 2020-06-22 12:42:19 PDT
Note that there are important steps to take when updating ANGLE. See http://trac.webkit.org/wiki/UpdatingANGLE
Comment 3 EWS 2020-06-22 13:24:53 PDT
Committed r263362: <https://trac.webkit.org/changeset/263362>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 402497 [details].
Comment 4 Radar WebKit Bug Importer 2020-06-22 13:25:20 PDT
<rdar://problem/64606083>