WebGL cannot create a context if there is no GPU on the PCIe bus https://bugs.webkit.org/show_bug.cgi?id=213479

Reviewed by Maciej Stachowiak and Dean Jackson.

* src/gpu_info_util/SystemInfo_macos.mm:
(angle::GetSystemInfo):
Do not bail from WebGL initialization if there are no GPUs on the PCIe bus.
Instead, continue on to context creation, and allow the system frameworks
to return an error if there truly is no GPU.


Canonical link: https://commits.webkit.org/226268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263362 268f45cc-cd09-0410-ab3c-d52691b4dbfc